Finalize GPU/Tree-free proving
